--- a/naruto.css
+++ b/naruto.css
@@ -16,7 +16,7 @@
 	--font:						Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;
 	--textshadow:					transparent;
 	
-	--background:					url(https://6gx.github.io/naruto/Naruto.jpg);
+	--background:					url(https://6gx.github.io/naruto/naruto.jpg);
 	--backgroundposition:			center;
 	--backgroundsize:				cover;
 	--backgroundblur:				unset;
