--- a/naruto.css
+++ b/naruto.css
@@ -673,7 +673,7 @@ body::before {
 	color: rgb(var(--fontwhite2));
 }
 .channel-2QD9_O .name-uJV0GL {
-	color: rgb(var(--fontwhite2));
+	color: #e86ae5;
 }
 .channel-2QD9_O .subtext-1RtU34 {
 	color: rgb(var(--fontwhite3));
@@ -1866,13 +1866,13 @@ body::before {
 	border-top-color: rgba(var(--fontwhite1), 0.1);
 }
 .peopleListItem-2nzedh .username-31C1TQ {					/* peoples				username							*/
-	color: rgb(var(--fontwhite2));
+	color: rgb(14,142,117);
 }
 .peopleListItem-2nzedh .discriminator-22Okc1 {				/* peoples				discriminator						*/
 	color: rgb(var(--fontwhite4));
 }
 .peopleListItem-2nzedh .subtext-24R4-w {					/* peoples				subtext								*/
-	color: rgb(var(--fontwhite3));
+	color: #822fd4;
 }
 .peopleListItem-2nzedh .actionButton-uPB8Fs {				/* peoples				actionbutton						*/
 	background-color: rgba(var(--transparencycolor), 0.1);
