--- a/naruto.theme.css
+++ b/naruto.theme.css
@@ -1,11 +1,10 @@
 /**
  * @name naruto
- * @description Allows you to use a Background Image without greatly altering the basic Layout of Discord
- * @author 6gx
- * @version 1
- * @website https://6gx.github.io/
- * @source https://github.com/6gx/naruto/
+ * @author Sociopath
+ * @description A theme for users who loves Naruto anime.
+ * @version 2
  */
+
 
 /* To change stuff like the colors, transparency and background image, change the variables inside the root {}, do NOT change the @import url() */
 
