--- a/naruto.css
+++ b/naruto.css
@@ -1,6 +1,5 @@
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css);
 @import url(https://6gx.github.io/Themes/BlurpleRecolor/BlurpleRecolor.css);
-@import url(https://discord-custom-covers.github.io/usrbg/dist/usrbg.css);
 
 :root {
 	--transparencycolor:			0,0,0;
@@ -212,7 +211,7 @@ body,														/* body														*/
 }
 
 #app-mount .image-3zK3Wt {									/* app					errorscreen image					*/
-	background-image: url(https://discordapp.com/assets/e9baf4b505eb54129f832556ea16538e.svg);
+	background-image: url(https://discord.com/assets/e9baf4b505eb54129f832556ea16538e.svg);
 	opacity: 0.6;
 }
 
@@ -483,22 +482,22 @@ body::before {
 }
 .channelNotice-1-XFjC.guildMFAWarning-3GEzs8::before {
 	opacity: 0.6;
-	background: url(https://discordapp.com/assets/916a384814e3bbd2a84e2a1b352a17c3.svg) center 20px no-repeat;
+	background: url(https://discord.com/assets/916a384814e3bbd2a84e2a1b352a17c3.svg) center 20px no-repeat;
 }
 .channelNotice-1-XFjC.quickswitcher-35bYg4::before {
 	opacity: 0.6;
 }
 .channelNotice-1-XFjC.maxMembersCount-3E4zND::before {
 	opacity: 0.6;
-	background: url(https://discordapp.com/assets/01f60394adffda20dc7270a1e3c727df.svg) center 16px no-repeat;
+	background: url(https://discord.com/assets/01f60394adffda20dc7270a1e3c727df.svg) center 16px no-repeat;
 }
 .channelNotice-3DDmsB::before {
 	opacity: 0.6;
-	background: url(https://discordapp.com/assets/1858873f28bdc62dfb3a1f4b67d459bf.svg) center top 20px/153px no-repeat;
+	background: url(https://discord.com/assets/1858873f28bdc62dfb3a1f4b67d459bf.svg) center top 20px/153px no-repeat;
 }
 #app-mount .channelNotice-3hkOiI::before {
 	opacity: 0.6;
-	background: url(https://discordapp.com/assets/7065587bd42fd829925bf6aa4b36f5e2.svg) center top 22px/220px no-repeat;
+	background: url(https://discord.com/assets/7065587bd42fd829925bf6aa4b36f5e2.svg) center top 22px/220px no-repeat;
 }
 .close-relY5R {												/* notice				close								*/
 	color: rgb(var(--fontwhite3));
