--- a/naruto.css
+++ b/naruto.css
@@ -4209,10 +4209,10 @@ uploadModal-2ifh8j .checkbox-1ix_J3.checked-3_4uQ9 {
 #app-mount .modal-DRZfgq .checkbox-1ix_J3 [stroke="#7289da"] {
 	stroke: rgb(var(--fontwhite1)) !important;
 }
-#app-mount .ack-2yIUvY {									/* modal				acklabel							*/
+#app-mount .ack-3sCuAV {									/* modal				acklabel							*/
 	color: rgb(var(--fontwhite2));
 }
-#app-mount .buttonContainer-3S_miP {						/* modal				footer								*/
+#app-mount .buttonContainer-28osRq {						/* modal				footer								*/
 	background-color: rgba(var(--transparencycolor), 0.2);
 	box-shadow: none;
 }
@@ -4420,7 +4420,7 @@ uploadModal-2ifh8j .checkbox-1ix_J3.checked-3_4uQ9 {
 	color: rgb(var(--fontwhite3));
 	margin: 0 18px;
 }
-#app-mount .button-38aScr:hover .giftIcon-2Pjbiy {
+#app-mount .button-f2h6uQ:hover .giftIcon-2Pjbiy {
 	color: rgb(var(--fontwhite2));
 }
 #app-mount .button-38aScr:active .giftIcon-2Pjbiy {
