--- a/naruto.css
+++ b/naruto.css
@@ -153,28 +153,32 @@
 /* ~~~~		1.		TRANSPARENCY					~~~~ */
 
 body,														/* body														*/
-#app-mount .app-1q1i1E,										/* app					container							*/
-#app-mount .app-2rEoOp,										/* app					inner								*/
-#app-mount .container-16j22k,								/* app					loadingscreen						*/
-#app-mount .wrapper-1prNyd,									/* app					errorscreen							*/
-#app-mount .bg-h5JY_x,										/* app					background							*/
-#app-mount .layer-3QrUeG,									/* layer				container							*/
-#app-mount .container-3w7J-x,								/* channels				inner								*/
-#app-mount .privateChannels-1nO12o,							/* dmchannels												*/
-#app-mount .panels-j1Uci_ > *,								/* account/voice		inner								*/
-#app-mount .chat-3bRxxu,									/* chat					container							*/
-#app-mount .wrapper-3vR61M,									/* chat					messages loading					*/
+#app-mount .app-3xd6d0,										/* app					container							*/
+#app-mount .app-2CXKsg,										/* app					inner								*/
+#app-mount .loading-1yrGTe,									/* app					i18n loading						*/
+#app-mount .wrapper-3AZUiP,									/* app					errorscreen							*/
+#app-mount .bg-1QIAus,										/* app					background							*/
+#app-mount .layer-86YKbF,									/* layer				container							*/
+#app-mount .container-2o3qEW,								/* layer				container							*/
+#app-mount .container-1NXEtd,								/* channels				inner								*/
+#app-mount .privateChannels-oVe7HL,							/* dmchannels												*/
+#app-mount .panels-3wFtMD > *,								/* account/voice		inner								*/
+#app-mount .chat-2ZfjoI,									/* chat					container							*/
+#app-mount .container-3XgAHv,								/* chat					thread sidebar						*/
+#app-mount .wrapper-3HVHpV,									/* chat					messages loading					*/
 #app-mount .noChannel-Z1DQK7,								/* nochannel												*/
-#app-mount .members-1998pB,									/* members													*/
-#app-mount .members-1998pB > div,							/* members				content								*/
-#app-mount .content-MLh4nU,									/* unavailable												*/
-#app-mount .container-1D34oG,								/* peoples													*/
-#app-mount .applicationStore-1pNvnv,						/* nitro													*/
-#app-mount .pageWrapper-1PgVDX,								/* guilddiscovery											*/
-#app-mount .scrollerBase-289Jih,							/* scroller													*/
+#app-mount .members-3WRCEx,									/* members													*/
+#app-mount .members-3WRCEx > div,							/* members				content								*/
+#app-mount .content-3_h0XI,									/* unavailable												*/
+#app-mount .container-2cd8Mz,								/* peoples													*/
+#app-mount .container-1oAagU,								/* peoples				activity list						*/
+#app-mount .applicationStore-2nk7Lo,						/* nitro													*/
+#app-mount .pageWrapper-2PwDoS,								/* guilddiscovery											*/
+#app-mount .pageWrapper-1x6lGh,								/* unihub													*/
+#app-mount .scrollerBase-_bVAAt,							/* scroller													*/
 #app-mount .scroller-2FKFPG,								/* scroller old												*/
-#app-mount .standardSidebarView-3F1I7i,						/* settings													*/
-#app-mount .contentRegion-3nDuYy {							/* settings				content								*/
+#app-mount .standardSidebarView-E9Pc3j,						/* settings													*/
+#app-mount .contentRegion-3HkfJJ {							/* settings				content								*/
 	background: transparent;
 }
 
