--- a/naruto.css
+++ b/naruto.css
@@ -14,6 +14,17 @@
 	
 	--font:						Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;
 	--textshadow:					transparent;
+
+	--successcolor: 				59,165,92;
+	--warningcolor: 				250,166,26;
+	--dangercolor: 					237,66,69;
+	
+	--textbrightest: 				255,255,255;
+	--textbrighter: 				222,222,222;
+	--textbright: 					200,200,200;
+	--textdark: 					160,160,160;
+	--textdarker: 					125,125,125;
+	--textdarkest: 					90,90,90;
 	
 	--background:					url(https://6gx.github.io/naruto/naruto.jpg);
 	--backgroundposition:			center;
@@ -43,6 +54,7 @@
 	--background-secondary-alt: rgba(var(--transparencycolor), 0.3);
 	--background-tertiary: rgba(var(--transparencycolor), 0.4);
 	--background-floating: rgba(var(--transparencycolor), 0.5);
+	--background-modifier-accent: rgba(var(--textbrightest),.1);
 	--header-primary: rgb(var(--fontwhite1));
 	--header-secondary: rgb(var(--fontwhite2));
 	--text-normal: rgb(var(--fontwhite2));
